update: 增加获取用户排行榜功能
