# backend/docs/swagger.yaml
@@ -29,6 +29,8 @@ definitions:
     type: object
 info:
   contact: {}
+  title: "OnlineOJ"
+  version: "v1"
 paths:
   /problems/details:
     get:
@@ -271,6 +273,45 @@ paths:
           schema:
             $ref: '#/definitions/service.FailResponse'
       summary: 用户登录
+      tags:
+      - 公共方法
+  /users/rank:
+    get:
+      parameters:
+      - description: 请输入页数，默认为1
+        in: query
+        name: page
+        type: integer
+      - description: 请输入每页结果个数，默认为20
+        in: query
+        name: size
+        type: integer
+      responses:
+        "200":
+          description: 成功返回列表数据
+          schema:
+            $ref: '#/definitions/service.SuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "404":
+          description: 资源不存在
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+      summary: 用户排行榜
       tags:
       - 公共方法
   /users/register:
